# eurostat-energy-balance_processing

./: .gitignore  README.md  environment.yml  pixi.toml  pyproject.toml  workflow.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
configs/: config.default.yaml  mapping.default.yaml
eurostat_energy_balance_processing/: __init__.py  class_definitions.py  utils.py  workflow.py
eurostat_energy_balance_processing/configs/: config.default.yaml  mapping.default.yaml
eurostat_energy_balance_processing/defaults/: config.default.yaml
tests/: conftest.py  test_eb_processor.py  test_iamc_creator.py  test_utils.py  test_validation_creator.py  test_workflow_config.py
